--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link 
-      href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Libre+Caslon+Text:wght@400;700&display=swap" rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Libre+Caslon+Text:wght@400;700&family=Merriweather:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"
     >
     <title>React App</title>
   </head>
